<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY app_name "MFF">
]>

<resources>
    <string name="app_name">&app_name;</string>
    <string name="required_label_symbol">*</string>

    <!-- DEFAULT LABELS -->
    <string name="def_username_label">Username</string>
    <string name="def_display_name_label">Display Name</string>
    <string name="def_email_label">Email Address</string>
    <string name="def_password_label">Password</string>
    <string name="def_dont_own_account">Don\'t own an account? Click here.</string>
    <string name="def_already_own_account">Already own an account? Click here.</string>

    <!-- DEFAULT VALUES -->
    <string name="def_password_value">password123</string>
    <string name="chat_message_box_placeholder">Hello everyone!</string>
</resources>