<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/dark_background_color"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@color/dark_background_color"
        android:gravity="center"
        android:minWidth="225dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@mipmap/logo" />

        <TextView
            android:id="@+id/loginEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/def_email_label"
            android:textAllCaps="true"
            android:textColor="@color/dark_input_label_color"
            android:textSize="13sp"
            android:textStyle="bold"
            android:labelFor="@id/loginEmail"/>

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/dark_input_border"
            android:ems="10"
            android:hint="john.doe@hotmail.com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/dark_placeholder_text_color"
            android:textColorHighlight="@color/dark_placeholder_text_color"
            android:textColorHint="@color/dark_placeholder_text_color"
            android:textColorLink="@color/dark_placeholder_text_color"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/loginPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/def_password_label"
            android:textAllCaps="true"
            android:textColor="@color/dark_input_label_color"
            android:textSize="13sp"
            android:textStyle="bold"
            android:labelFor="@id/loginPassword"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/dark_input_border"
            android:ems="10"
            android:hint="@string/def_password_value"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/dark_placeholder_text_color"
            android:textColorHighlight="@color/dark_placeholder_text_color"
            android:textColorHint="@color/dark_placeholder_text_color"
            android:textColorLink="@color/dark_placeholder_text_color"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_highlight_color"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="26dp"
            android:paddingTop="12dp"
            android:paddingRight="26dp"
            android:paddingBottom="12dp"
            android:text="Sign In"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loginSwitchToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/def_dont_own_account"
            android:textColor="@color/dark_primary_text_color"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>