<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/dark_background_color"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:minWidth="225dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@mipmap/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/required_label_symbol"
                android:textColor="@color/error_red"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/registerNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/def_username_label"
                android:textAllCaps="true"
                android:textColor="@color/dark_input_label_color"
                android:textSize="13sp"
                android:textStyle="bold"
                android:labelFor="@id/registerName"/>
        </LinearLayout>

        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:autofillHints="username"
            android:background="@drawable/dark_input_border"
            android:ems="10"
            android:hint="jane_doe"
            android:inputType="text"
            android:maxLength="@integer/max_username_length"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/dark_placeholder_text_color"
            android:textColorHighlight="@color/dark_placeholder_text_color"
            android:textColorHint="@color/dark_placeholder_text_color"
            android:textColorLink="@color/dark_placeholder_text_color"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/required_label_symbol"
                android:textColor="@color/error_red"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/registerEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/def_email_label"
                android:textAllCaps="true"
                android:textColor="@color/dark_input_label_color"
                android:textSize="13sp"
                android:textStyle="bold"
                android:labelFor="@id/registerEmail"/>
        </LinearLayout>

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/dark_input_border"
            android:ems="10"
            android:hint="jane.doe@hotmail.com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/dark_placeholder_text_color"
            android:textColorHighlight="@color/dark_placeholder_text_color"
            android:textColorHint="@color/dark_placeholder_text_color"
            android:textColorLink="@color/dark_placeholder_text_color"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/required_label_symbol"
                android:textColor="@color/error_red"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/registerPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/def_password_label"
                android:textAllCaps="true"
                android:textColor="@color/dark_input_label_color"
                android:textSize="13sp"
                android:textStyle="bold"
                android:labelFor="@id/registerPassword"/>
        </LinearLayout>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7.5dp"
            android:autofillHints="password"
            android:background="@drawable/dark_input_border"
            android:ems="10"
            android:hint="@string/def_password_value"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/dark_placeholder_text_color"
            android:textColorHighlight="@color/dark_placeholder_text_color"
            android:textColorHint="@color/dark_placeholder_text_color"
            android:textColorLink="@color/dark_placeholder_text_color"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/registerDisplayNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/def_display_name_label"
            android:textAllCaps="true"
            android:textColor="@color/dark_input_label_color"
            android:textSize="13sp"
            android:textStyle="bold"
            android:labelFor="@id/registerDisplayName"/>

        <EditText
            android:id="@+id/registerDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="name"
            android:background="@drawable/dark_input_border"
            android:ems="10"
            android:hint="Jane Doe"
            android:inputType="text"
            android:maxLength="@integer/max_display_name_length"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/dark_placeholder_text_color"
            android:textColorHighlight="@color/dark_placeholder_text_color"
            android:textColorHint="@color/dark_placeholder_text_color"
            android:textColorLink="@color/dark_placeholder_text_color"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_highlight_color"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="26dp"
            android:paddingTop="12dp"
            android:paddingRight="26dp"
            android:paddingBottom="12dp"
            android:text="Register"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/registerSwitchToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/def_already_own_account"
            android:textColor="@color/dark_primary_text_color"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>